--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
   cupertino_icons: ^1.0.5
   macos_ui: ^1.12.1+1
   flutter_chat_ui: ^1.6.6
+  flutter_bloc: ^8.1.2
+  file_picker: ^5.2.6
+  http: ^0.13.5
+  open_filex: ^4.3.2
+  path_provider: ^2.0.14
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +46,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/messages.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
