--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,6 @@ dependencies:
 
   cupertino_icons: ^1.0.5
   macos_ui: ^1.12.1+1
-  flutter_chat_ui: ^1.6.6
   flutter_bloc: ^8.1.2
   file_picker: ^5.2.6
   http: ^0.13.5
@@ -20,6 +19,12 @@ dependencies:
   path_provider: ^2.0.14
   uuid: ^3.0.7
   chat_gpt_sdk: 2.0.6
+  flutter_chat_ui:
+    path: ../flutter_chat_ui
+  flutter_link_previewer: 
+    path: ../flutter_link_previewer
+  flutter_chat_types:
+    path: ../flutter_chat_types
 
 dev_dependencies:
   flutter_test:
